[package]
name = "globals"
version = "1.0.2"
authors = ["Richard Anaya"]
edition = "2018"
description = "Painless global variables in Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/richardanaya/globals"

[dependencies]
spin = "0.5"

[dependencies.once_cell]
version = "1"
features = []
