[package]
name = "globals"
version = "1.0.3"
authors = ["Richard Anaya"]
edition = "2021"
description = "Painless global variables in Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/richardanaya/globals"
categories = ["wasm", "no-std"]
readme = "README.md"
rust-version="1.63"

[dependencies]
spin = "0.5"